fixed diagram and added input type for swagger
