# docs/swagger.json
@@ -32,7 +32,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.Data"
                         }
                     }
                 ],
@@ -44,6 +44,28 @@
                         "description": "Bad Request",
                         "schema": {}
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "models.Data": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "message": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "numOfSegment": {
+                    "type": "integer"
+                },
+                "totalSegments": {
+                    "type": "integer"
                 }
             }
         }
