# models/segment.go
@@ -1,0 +1,8 @@
+package models
+
+type Data struct {
+	NumOfSegment  int
+	TotalSegments int
+	Message       []byte
+	Id            int
+}
